CWDOTCOM-47 sorted css valign issue

--- a/src/main/webapp/stylesheet/ui_theme.css
+++ b/src/main/webapp/stylesheet/ui_theme.css
@@ -26,11 +26,11 @@ body {
 }
 .blob {
     transform: translate(23%,3%) scale(0.65);
-    fill: rgb(225, 225, 225);
+    fill: rgb(250,250,250);
     transition: 0.4s;
 }
 .card.active .blob {
-    fill: rgb(250,250,250);
+    fill: rgb(70,150,230);
     transform: translate(23%,3%) scale(3.75);
 }
 .card.active .bg-overlay {
